2024-09-10T00:36:42Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/10783582454 # 414
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-09-10
* notice: last 14d: unq all: 7 18
* notice: prev accum: outdated-unq outdated-all / unq all: 357 1280 / 362 1292
* notice: next accum: outdated-unq outdated-all / unq all: 357 1280 / 364 1298
* notice: prev exec diff / last date diff / accum: unq all: +2 +6 -0 -0 / +2 +6 -0 -0 / 2 6
* notice: removed / changed dates: [] / [2024-09-09]

2024-09-08T00:40:04Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/10755650267 # 412
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-09-08
* notice: last 14d: unq all: 5 12
* notice: prev accum: outdated-unq outdated-all / unq all: 356 1278 / 362 1292
* notice: next accum: outdated-unq outdated-all / unq all: 357 1280 / 362 1292
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-08-24] / []

2024-09-07T00:35:33Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/10747082680 # 411
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-09-07
* notice: last 14d: unq all: 6 14
* notice: prev accum: outdated-unq outdated-all / unq all: 356 1278 / 361 1290
* notice: next accum: outdated-unq outdated-all / unq all: 356 1278 / 362 1292
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2024-09-06]

2024-09-06T00:36:14Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/10730328217 # 410