@@ -1,6 +1,6 @@
 {
-  "count": 18,
-  "uniques": 7,
+  "count": 36,
+  "uniques": 8,
   "views": [
     {
       "timestamp": "2024-08-31T00:00:00Z",
@@ -26,6 +26,11 @@
       "timestamp": "2024-09-09T00:00:00Z",
       "count": 6,
       "uniques": 2
+    },
+    {
+      "timestamp": "2024-09-10T00:00:00Z",
+      "count": 18,
+      "uniques": 1
     }
   ]
 }
